<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="loginRowModel" type="com.agusarifsapplication.app.modules.login.data.model.LoginRowModel"/>
    </data>
    <FrameLayout android:id="@+id/frameStacksixtytwo"
        android:layout_height="wrap_content" android:layout_width="match_parent">
        <FrameLayout android:id="@+id/frameStacksubtract"
            android:layout_gravity="bottom|start"
            android:layout_height="@dimen/_43pxv"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="@dimen/_350pxh" style="@style/groupStylewhite_A700_63cornerRadius">
            <ImageView android:id="@+id/imageSubtract"
                android:layout_gravity="start"
                android:layout_height="@dimen/_43pxh"
                android:layout_width="@dimen/_350pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_subtract"
                tools:ignore="ContentDescription" tools:src="@drawable/img_subtract"/>
        </FrameLayout>
        <LinearLayout android:id="@+id/linearRowsixtytwo"
            android:layout_gravity="bottom|start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtSixtyTwo"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.21" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{loginRowModel.txtSixtyTwo}"
                style="@style/txtNunitobold14" tools:text="@string/lbl_62"/>
            <EditText android:ellipsize="end"
                android:id="@+id/txt82349389102"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_weight="0.79" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{loginRowModel.txt82349389102}"
                style="@style/txtNunitoregular14_1" tools:text="@string/lbl_823_4938_9102"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtNoTelepon"
            android:layout_gravity="top|start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginRowModel.txtNoTelepon}"
            style="@style/txtNunitobold12" tools:text="@string/lbl_no_telepon"/>
    </FrameLayout>

</layout>
