<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="halamanBarcodeVM" type="com.agusarifsapplication.app.modules.halamanbarcode.data.viewmodel.HalamanBarcodeVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearHalamanBarcode"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnrectangle171"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyleblue_800">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <FrameLayout android:id="@+id/frameStackrectangle171"
                    android:layout_height="@dimen/_63pxv" android:layout_width="match_parent">
                    <ImageView android:id="@+id/imageRectangle171"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_63pxh"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="@dimen/_105pxh"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_rectangle171}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle171"/>
                    <ImageView android:id="@+id/imageAsfOne"
                        android:layout_gravity="top|end"
                        android:layout_height="@dimen/_30pxh"
                        android:layout_marginBottom="@dimen/_14pxv"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_14pxv"
                        android:layout_width="@dimen/_143pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_asf1"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_asf1"/>
                </FrameLayout>
            </androidx.appcompat.widget.Toolbar>
            <TextView android:ellipsize="end" android:gravity="end"
                android:id="@+id/txtBarcodePemesan"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_18pxv"
                android:layout_marginEnd="@dimen/_77pxh"
                android:layout_marginStart="@dimen/_77pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{halamanBarcodeVM.halamanBarcodeModel.txtBarcodePemesan}"
                style="@style/txtNunitobold22_1" tools:text="@string/msg_barcode_pemesan"/>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameStackvector"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_237pxv"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_155pxv"
            android:layout_width="@dimen/_258pxh" style="@style/groupStylewhite_1">
            <ImageView android:id="@+id/imageVector"
                android:layout_gravity="center"
                android:layout_height="@dimen/_232pxh"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="@dimen/_253pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_vector"
                tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
        </FrameLayout>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtSilhkanMelakuk"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_64pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:text="@{halamanBarcodeVM.halamanBarcodeModel.txtSilhkanMelakuk}"
            style="@style/txtNunitoregular14" tools:text="@string/msg_silhkan_melakuk"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPesan"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{halamanBarcodeVM.halamanBarcodeModel.txtPesan}"
            style="@style/txtNunitobold17_2" tools:text="@string/lbl_pesan"/>
    </LinearLayout>
</layout>
